[metadata]
# replace with your username:
name = bin_tree
description = A python module that provides mutable mappings and sets implemented with binary trees.
author = SBA
author_email = s-ball@laposte.net
url = https://github.com/s-ball/bin_tree
license = MIT License
project_urls =
    Changelog = https://github.com/s-ball/bin_tree/blob/master/CHANGES.txt
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    bin_tree
python_requires = >=3.5
